Removed redundant elements and fixed alignment of blog post page

--- a/src/style.css
+++ b/src/style.css
@@ -347,7 +347,7 @@ a:focus {
   }
 
   main {
-    padding-block: var(--spacing-2) var(--spacing-2);
+    padding-block: var(--spacing-0) var(--spacing-2);
     padding-inline: var(--spacing-6);
   }
 
